# MAGport

./: .gitattributes  .gitignore  README.md  out.html  pyproject.toml  visualization_implement.md
config/: config.yaml
magport/: cli.py
magport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/test_input_MAGs/: MAG1.fna  MAG209.fna  MAG256.fna  MAG320.fna  MAG665.fna  MAG70.fna
test/test_output/: MAGport_report.html  MAGport_summary.tsv
workflow/: Snakefile
workflow/envs/: barrnap.yaml  blast.yaml  checkm1.yaml  checkm2.yaml  diamond.yaml  gtdbtk.yaml  gunc.yaml  prodigal.yaml  python.yaml  seqkit.yaml  trnascan.yaml
workflow/rules/: checkm.smk  collect.smk  databases.smk  download.smk  gtdb.smk  gunc.smk  mimag.smk  orfs.smk  park.smk  quality.smk  report.smk  rrna.smk  rrna16s.smk  stats.smk  summary.smk  trna.smk
workflow/scripts/: collect.py  mimag.py  park_score.py  report.py  report_template.html  summary.py
