[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magport"
version = "0.1.0"
description = "MAGport: A Snakemake pipeline for MAG characterization"
readme = "README.md"
authors = [{ name = "MAGport Authors" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "snakemake>=7.32,<9",
  "pandas>=2.0",
  "jinja2>=3.1",
  "plotly>=5.15",
  "numpy>=1.24",
  "typer>=0.12",
  "rich>=13.0",
]

[project.scripts]
magport = "magport.cli:app"

[tool.setuptools]
packages = ["magport"]
